Fixed problems with collections
